--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Headphones</title>
     <link rel="icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="styles-desktop.css" media="screen and (min-width: 1000px)">
-    <link rek="stylesheet" href="styles-mobile.css" media="screen and (max-width: 767px)">
+    <link rel="stylesheet" href="styles-mobile.css" media="screen and (max-width: 767px)">
     <link rel="stylesheet" href="/fonts/holberton_school-icon/style.css"
 </head>
 <body>
