--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="styles-desktop.css" media="screen and (min-width: 1000px)">
     <link rel="stylesheet" href="styles-mobile.css" media="screen and (max-width: 767px)">
-    <link rel="stylesheet" href="/fonts/holberton_school-icon/style.css"
+    <link rel="stylesheet" href="/fonts/holberton_school-icon/style.css">
 </head>
 <body>
     <div id="hero-header-wrapper">
