--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/fonts/holberton_school-icon/style.css">
 </head>
 <body>
-    <div id="hero-header-wrapper">
+    <div id="banner-container">
     <!-- Header Section -->
      <header>
         <div id="navigation-bar">
